apps/podinfo/overlays/production/podinfo-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo-ingress
  namespace: production  # Ensure this matches the namespace of the podinfo service
  labels:
    app.kubernetes.io/name: podinfo-ingress-production
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # Uncomment the following if you need SSL or cert-manager integration
    # cert-manager.io/cluster-issuer: "letsencrypt-production"
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: fluxv2infrademo.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: podinfo  # Ensure this matches the podinfo service name
                port:
                  number: 9898
